--- a/MyBodyShape.Android/Resources/layout/Main.axml
+++ b/MyBodyShape.Android/Resources/layout/Main.axml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.view.ViewPager
+<mybodyshape.android.helpers.BodyShapeViewPager
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/bodyshapeViewPager"
   android:layout_width="match_parent" 
@@ -11,4 +11,4 @@
   android:layout_height="wrap_content" 
   android:layout_gravity="top"  />
 
-  </android.support.v4.view.ViewPager>
+  </mybodyshape.android.helpers.BodyShapeViewPager>
