--- a/MyBodyShape.Android/Resources/layout/Picture1.axml
+++ b/MyBodyShape.Android/Resources/layout/Picture1.axml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/layoutPicture1Container">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
   <RelativeLayout
         android:layout_width="0dip"
         android:layout_height="fill_parent"
@@ -44,3 +47,4 @@
         android:layout_weight="0.15">
     </RelativeLayout>
 </LinearLayout>
+  </FrameLayout>
