--- a/MyBodyShape.Android/Resources/layout/Main.axml
+++ b/MyBodyShape.Android/Resources/layout/Main.axml
@@ -9,6 +9,7 @@
   <android.support.v4.view.PagerTabStrip
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" 
-  android:layout_gravity="top"  />
+  android:layout_gravity="top"
+  android:textColor="#fff" />
 
   </mybodyshape.android.helpers.BodyShapeViewPager>
