--- a/MyBodyShape.Android/Resources/layout/Results.axml
+++ b/MyBodyShape.Android/Resources/layout/Results.axml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:orientation="vertical"
             android:gravity="center"
             android:id="@+id/layoutResults">
@@ -12,6 +11,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/headMass"/>
               <TextView
               android:layout_width="wrap_content"
@@ -19,6 +19,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/neckMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -26,6 +27,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/thoraxMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -33,6 +35,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/abdoMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -40,6 +43,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/fesseMass"/>
 
 <TextView
@@ -48,6 +52,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/cuissegaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -55,6 +60,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/cuissedroiteMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -62,6 +68,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/jambegaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -69,6 +76,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/jambedroiteMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -76,6 +84,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/chevillegaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -83,6 +92,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/chevilledroiteMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -90,6 +100,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/piedgaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -97,6 +108,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/pieddroitMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -104,6 +116,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/brasgaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -111,6 +124,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/brasdroitMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -118,6 +132,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/avantbrasgaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -125,6 +140,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/avantbrasdroitMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -132,6 +148,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/maingaucheMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -139,6 +156,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/maindroiteMass"/>
 <TextView
               android:layout_width="wrap_content"
@@ -146,6 +164,7 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/errorInfo"/>
 <TextView
               android:layout_width="wrap_content"
@@ -153,5 +172,6 @@
               android:text=""
               android:textSize="12sp"
               android:textStyle="bold"
+              android:textColor="#fff"
               android:id="@+id/totalMass"/>
 </LinearLayout>
