--- a/MyBodyShape.Android/Resources/layout/Results.axml
+++ b/MyBodyShape.Android/Resources/layout/Results.axml
@@ -5,151 +5,10 @@
             android:orientation="vertical"
             android:gravity="center"
             android:id="@+id/layoutResults">
-              <TextView
+<ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/headMass"/>
-              <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/neckMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/thoraxMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/abdoMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/fesseMass"/>
-
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/cuissegaucheMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/cuissedroiteMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/jambegaucheMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/jambedroiteMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/piedgaucheMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/pieddroitMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/brasgaucheMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/brasdroitMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/avantbrasgaucheMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/avantbrasdroitMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/maingaucheMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/maindroiteMass"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/errorInfo"/>
+              android:id="@+id/resultsSnap"/>
 <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
