--- a/MyBodyShape.Android/Resources/layout/Results.axml
+++ b/MyBodyShape.Android/Resources/layout/Results.axml
@@ -4,18 +4,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
-            android:id="@+id/layoutResults">
-<ImageView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:id="@+id/resultsSnap"/>
-<TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:gravity="center_horizontal"
-              android:text=""
-              android:textSize="12sp"
-              android:textStyle="bold"
-              android:textColor="#fff"
-              android:id="@+id/totalMass"/>
+            android:weightSum="100">
+            <LinearLayout android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_weight="90"
+                        android:id="@+id/layoutResults">
+            </LinearLayout>
+            <LinearLayout android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_weight="10">
+              <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:text=""
+                            android:textSize="12sp"
+                            android:textStyle="bold"
+                            android:textColor="#fff"
+                            android:id="@+id/totalMass"/>
+            </LinearLayout>
 </LinearLayout>
