Fin fonctionnalité zoom

--- a/MyBodyShape.Android/Resources/layout/Feedback.axml
+++ b/MyBodyShape.Android/Resources/layout/Feedback.axml
@@ -16,7 +16,7 @@
   <EditText
                 android:layout_width="300dp"
                 android:layout_height="match_parent"
-                android:gravity="center_horizontal"
+                android:gravity="left"
                 android:layout_marginTop="20dp"
                 android:id="@+id/feedBackEditText"
                 android:text=""
