--- a/MyBodyShape.Android/Resources/layout/Splash.axml
+++ b/MyBodyShape.Android/Resources/layout/Splash.axml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
 android:layout_height="100dp"
-android:orientation="vertical"
-android:layout_marginTop="50dp">
+android:layout_marginTop="50dp"
+android:id="@+id/splashLayout">
   <TextView
       android:id="@+id/nbSimulationsResults"
       android:layout_width="wrap_content"
@@ -16,4 +16,4 @@ android:layout_marginTop="50dp">
       android:gravity="center_horizontal"
       android:layout_marginTop="10dp"
       android:background="@android:color/transparent" />
-</RelativeLayout>
+</FrameLayout>
