--- a/MyBodyShape.Android/Resources/layout/Splash.axml
+++ b/MyBodyShape.Android/Resources/layout/Splash.axml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="100dp"
-android:layout_marginTop="50dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:layout_gravity="bottom"
 android:id="@+id/splashLayout">
+    <WebView 
+      android:id="@+id/rubiksCubeSplash"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="80dp"
+      android:layout_centerHorizontal="true" />
   <TextView
       android:id="@+id/nbSimulationsResults"
       android:layout_width="wrap_content"
@@ -12,8 +19,9 @@ android:id="@+id/splashLayout">
       fontPath="Fonts/GARAIT.ttf"
       android:textSize="18sp"
       android:layout_centerInParent="true"
+      android:layout_alignParentBottom="true"
+      android:layout_marginBottom="80dp"
       android:textStyle="bold"
-      android:gravity="center_horizontal"
-      android:layout_marginTop="10dp"
+      android:layout_gravity="center_horizontal"
       android:background="@android:color/transparent" />
-</FrameLayout>
+</RelativeLayout>
